--- a/index.html
+++ b/index.html
@@ -2,7 +2,10 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>To-Do List</title>
+  <link rel="manifest" href="manifest.json">
+  <meta name="theme-color" content="#007bff">
   <style>
     body {
       font-family: Arial, sans-serif;
@@ -139,5 +142,12 @@
       taskList.appendChild(li);
     }
   </script>
+  <script>
+  if ("serviceWorker" in navigator) {
+    navigator.serviceWorker.register("service-worker.js")
+      .then(() => console.log("Service Worker registrado!"))
+      .catch(err => console.log("Error al registrar SW:", err));
+  }
+</script>
 </body>
 </html>
