--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 </head>
 <body>
   <div class="todo-container">
-    <h1>To-Don't List</h1>
+    <h1>To-Do List</h1>
     <div class="input-group">
       <input type="text" id="taskInput" placeholder="Escribe una tarea...">
       <button onclick="addTask()">➕</button>
